fix strange italic on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -431,9 +431,6 @@ p {
   margin-bottom: 1.2em;
   line-height: 1.4em;
 }
-i {
-  font-weight: 200;
-}
 ul {
   list-style: none;
 }
